--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-database:19.3.1'
-
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
